# polar-wg-app

./: .gitignore  Makefile  NEXT_STEPS.md  NE_INTEGRATION.md  PORTING_LOG.md  README.md  REVIEW.md  SECURITY.md  TROUBLESHOOTING_2026-04-11.md  WORK_LOG.md  WORK_LOG_2026-04-11.md  claude_answer_nocode.md  run_tunnel.sh  test_plan.md  todo.md  works.md
.github/workflows/: wg-agent-linux.yml
Assets.xcassets/AppIcon.appiconset/: Contents.json
Assets.xcassets/AppIcon.imageset/: Contents.json
Assets.xcassets/AppIcon2.appiconset/: Contents.json
Assets.xcassets/Zen.imageset/: Contents.json
Assets.xcassets/openai-iOS-ClearLight-1024x1024.imageset/: Contents.json
Assets.xcassets/openai-iOS-Dark-1024x1024.imageset/: Contents.json
Assets.xcassets/openai-iOS-Default-1024x1024.imageset/: Contents.json
Assets.xcassets/openai-iOS-TintedDark-1024x1024.imageset/: Contents.json
NetworkExtension/: KCP-TRANSPORT.md
NetworkExtension/Sources/: PacketTunnelProvider.swift
WireGuardAndroid/: .gitignore  build.gradle.kts  gradlew  local.properties  settings.gradle.kts
WireGuardAndroid/app/src/main/cpp/: CMakeLists.txt  wg_jni.c
WireGuardSampleApp/: Launch Screen.storyboard  README.md  project-ios.yml  project.yml
WireGuardSysExt/: project.yml
doc/: JOIN_PROTOCOL.md  hub-status.md  linux-peer-apply-design.md  wg-mac-ios-jailbreak.md  wg-mac-tailscale-howto.md
scripts/: build-ios-cli.sh  build-xcframework-ios-device.sh  build-xcframework.sh  com.wireguard.wg-mac.plist.template  com.wireguard.wgctl-agent.plist  deploy-ios.sh  install-ios.sh  install.sh  ios-device-debug.sh  join-ios.sh  join-linux.sh  join.sh  make-bundle-ios.sh  make-bundle.sh  uninstall.sh  wg-postup.sh  wgctl-agent.sh
skills/: wg-mac-install.skill
src/: allowedips.c  allowedips.h  buildclient.sh  crypto_bridge.swift  crypto_vector_test.c  curve25519_portable.c  opt_inet.h  opt_inet6.h  wg_client3.c  wg_core.c  wg_crypto_impl.c  wg_session.c  wg_session.h
(+66 files in other folders)
